# BlackboardEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  gen-proj-linux.sh  gen-proj-win.bat
BlackboardApplication/: CMakeLists.txt
BlackboardApplication/assets/models/: SM_Monobike.fbx
BlackboardApplication/assets/shaders/: textureBase.glsl
BlackboardApplication/src/: BlackboardApplication.cpp
BlackboardEditor/: CMakeLists.txt
BlackboardEditor/src/: BlackboardEditor.cpp  main.cpp
BlackboardRuntime/: CMakeLists.txt
BlackboardRuntime/src/: Application.cpp  Application.h  BlackboardRuntime.h  EntryPoint.h
BlackboardRuntime/src/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  TimeStep.h
BlackboardRuntime/src/Events/: ApplicationEvent.h  Event.h  EventDispatcher.h  KeyEvent.h  MouseEvent.h
BlackboardRuntime/src/Input/: Input.h  KeyCodes.h  MouseButtonCodes.h
BlackboardRuntime/src/Platform/Linux/: LinuxInput.cpp  LinuxInput.h  LinuxWindow.cpp  LinuxWindow.h
BlackboardRuntime/src/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
BlackboardRuntime/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
BlackboardRuntime/src/Rendering/: GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Window.h
BlackboardRuntime/src/Rendering/Buffers/: BufferLayout.h  IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
BlackboardRuntime/src/Rendering/Camera/: OrthographicCamera.cpp  OrthographicCamera.h
BlackboardRuntime/src/Resources/: Shader.cpp  Shader.h  Texture.cpp  Texture.h
